--- a/css/ladybug.css
+++ b/css/ladybug.css
@@ -5,7 +5,7 @@ html{
 body{
   font-family: "Segoe UI", "Lucinda Grande", Tahoma, sans-serif;
   font-size: 100%;
-  color:red;
+  color:BLACK;
 }
 #status{
   /*avoid an excessivley wide status text*/
